[package]
name = "project_daedalus"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = { version = "0.18.3", features = ["highlight_changes"] }
bevy_ecs_ldtk = "0.7.0"

[target.'cfg(dev)'.dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
